tests/errors/first_stage/operation/too_many_operands/too_many_operands.as
; too many operands for an operation
add #0, r2, r3